force-app/main/default/objects/WhitePaper__c/WhitePaper__c.object-meta.xml
<CustomObject>
    <label>WhitePaper</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WhitePapers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>