force-app/main/default/objects/WhitePaper__c/fields/Chapter1__c.field-meta.xml
<CustomField>
    <fullName>Chapter1__c</fullName>
    <label>Chapter1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>