force-app/main/default/objects/WhitePaper__c/fields/Chapter2__c.field-meta.xml
<CustomField>
    <fullName>Chapter2__c</fullName>
    <label>Chapter2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>