force-app/main/default/objects/WhitePaper__c/fields/Chapter3__c.field-meta.xml
<CustomField>
    <fullName>Chapter3__c</fullName>
    <label>Chapter3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>