force-app/main/default/objects/WhitePaper__c/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <label>Introduction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>